--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dakota Matters</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" type=“text/css” href="CSS/styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   </head>
