--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="skill-row">
           <img class="code-img" src="images/website-design.png" alt="Computer Coding Image">
           <h3>Website Design and Computer Programming</h3>
-          <p>I have a working knowledge with HTML and CSS, along with Python and Java.</p>
+          <p>I started my journey making small games in Junior High. Since then I have gained a working knowledge with HTML, CSS, Python and Java. I now have a dream to work in web development and make web appications.</p>
         </div>
         <div class="skill-row">
           <img class="gaming-img" src="images/gamepad.png" alt="Gaming Computer Image">
